--- a/11 flexbox/index.html
+++ b/11 flexbox/index.html
@@ -179,5 +179,8 @@
         <div class="caja">2</div>
         <div class="caja">3</div>
     </div>
+    <div class="content ejemplo20">
+        <div class="caja">1</div>
+    </div>
 </body>
 </html>
