--- a/12 bootstrap/index.html
+++ b/12 bootstrap/index.html
@@ -30,31 +30,72 @@
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          Accordion Item #1
+          Star walkin (Lil Nas X)
         </button>
       </h2>
       <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        <div class="accordion-body">Don't ever say it's over if I'm breathin'
+          Racin' to the moonlight and I'm speedin'
+          I'm headed to the stars, ready to go far
+          I'm star walkin' (star walkin') <code>.On a mission to get high up
+            I know that I'ma die reachin' for a life that I don't really need at all
+            Never listened to replies, learned a lesson from the wise
+            You should never take advice from a nigga that ain't try.</code> They said I wouldn't make it out alive
+            They told me I would never see the rise
+            That's why I gotta kill 'em every time
+            Gotta watch 'em bleed too</div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-          Accordion Item #2
+          Dile que tú me quieres (Ozuna)
         </button>
       </h2>
       <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+        <div class="accordion-body">Dile que tú me quieres, que no le haga caso a lo que le digan nos vivimos enamorando día a día <code>Dile que yo soy el que te quiere
+          Explícale lo que sucedió, entre tú y yo la llama se encendió, no sé cómo pasó</code> Dile que tú me quieres, que no le haga caso a lo que le digan, nos vivimos enamorando día a día, vida mía (Ozuna)</div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-          Accordion Item #3
+          God rap (Eminem)
         </button>
       </h2>
       <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        <div class="accordion-body">Look, I was gonna go easy on you not to hurt your feelings
+          But I'm only going to get this one chance (six minutes-, six minutes-)
+          Something's wrong, I can feel it (six minutes, Slim Shady, you're on!)
+          Just a feeling I've got, like something's about to happen, but I don't know what
+          If that means what I think it means, we're in trouble, big trouble
+          And if he is as bananas as you say, I'm not taking any chances
+          You are just what the doc ordered
+          I'm beginnin' to feel like a Rap God, Rap God
+          All my people from the front to the back nod, back nod
+          Now, who thinks their arms are long enough to slap box, slap box?
+          They said I rap like a robot, so call me Rap-bot,<code>But for me to rap like a computer, it must be in my genes
+            I got a laptop in my back pocket
+            My pen'll go off when I half-cock it
+            Got a fat knot from that rap profit
+            Made a livin' and a killin' off it
+            Ever since Bill Clinton was still in office
+            With Monica Lewinsky feelin' on his nutsack
+            I'm an MC still as honest
+            But as rude and as indecent as all hell
+            Syllables, skill-a-holic (kill 'em all with).</code> This flippity dippity-hippity hip-hop
+            You don't really wanna get into a pissin' match
+            With this rappity brat, packin' a MAC in the back of the Ac'
+            Backpack rap crap, yap-yap, yackety-yack
+            And at the exact same time, I attempt these lyrical acrobat stunts while I'm practicin' that
+            I'll still be able to break a motherfuckin' table
+            Over the back of a couple of faggots and crack it in half
+            Only realized it was ironic, I was signed to Aftermath after the fact
+            How could I not blow? All I do is drop F-bombs
+            Feel my wrath of attack
+            Rappers are havin' a rough time period, here's a maxi pad
+            It's actually disastrously bad for the wack
+            While I'm masterfully constructing this masterpièce</div>
       </div>
     </div>
   </div>
